--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
 
             <tr>
               <td style="padding:20px;width:25%;vertical-align:middle">
-                <img src="images/publications/alphalora.png" width="200" height="120">
+                <img src="images/publications/alphalora.png"  style="width:100%;height:auto;">
               </td>
               <td width="75%" valign="middle">
                 <a href="" target="_blank" style="color:#4169E1; text-decoration: none;">
