--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         <!-- <li class="nav-item"><a href="#Reading">Reading</a></li> -->
         <!-- <li class="nav-item"><a href="./Peijun_CV.pdf">CV</a></li> -->
         <li class="nav-item"><a href="#Teaching">Teaching</a></li>
-        <li class="nav-item"><a href="#Contact">Contact</a></li>
+        <li class="nav-item"><a href="#Contact">Service</a></li>
       </ul>
     </nav>
     <nav class="nav2-show">
@@ -41,7 +41,7 @@
     <ul class="nav-ul">
       <li class="nav-item"><a href="#">About Me</a></li>
       <li class="nav-item"><a href="#Publications">Publications</a></li>
-      <li class="nav-item"><a href="#Projects">Projects</a></li>
+      <li class="nav-item"><a href="#Projects">News</a></li>
       <!-- <li class="nav-item"><a href="#Employments">Employments</a></li> -->
       <!-- <li class="nav-item"><a href="./Xingjian_CV.pdf">CV</a></li> -->
       <li class="nav-item"><a href="#Contact">Contact</a></li>
@@ -304,7 +304,7 @@
 </section>
 
 
-    <footer>Xingjian Diao © 2023, referring to the <a href="https://github.com/jonbarron/jonbarron_website" target="_blank" style="color:#4169E1; text-decoration: none;">website template</a></footer>
+    <footer>Peijun Qing © 2023, referring to the <a href="https://github.com/jonbarron/jonbarron_website" target="_blank" style="color:#4169E1; text-decoration: none;">website template</a></footer>
   </div>
   <script src="./index.js"></script>
 </body>
