--- a/index.html
+++ b/index.html
@@ -26,13 +26,13 @@
       <ul class="nav-ul">
         <li class="nav-item"><a href="#">Biography</a></li>
         <li class="nav-item"><a href="#Publications">Publications</a></li>
-        <li class="nav-item"><a href="#Projects">Projects</a></li>
+        <li class="nav-item"><a href="#News">News</a></li>
         <!--<li class="nav-item"><a href="#Teaching">Teaching</a></li>-->
         <!-- <li class="nav-item"><a href="#Employments">Employments</a></li> -->
         <!-- <li class="nav-item"><a href="#Reading">Reading</a></li> -->
         <!-- <li class="nav-item"><a href="./Peijun_CV.pdf">CV</a></li> -->
         <li class="nav-item"><a href="#Teaching">Teaching</a></li>
-        <li class="nav-item"><a href="#Contact">Service</a></li>
+        <li class="nav-item"><a href="#Service">Service</a></li>
       </ul>
     </nav>
     <nav class="nav2-show">
