--- a/index.html
+++ b/index.html
@@ -54,10 +54,10 @@
 <!--         <h3 class="desc2">Capricorns</h3> <br> -->
 
         <ul class="icon">
-          <li class="icon-item"><a href="mailto:xingjian.diao.gr@dartmouth.edu"><img src="./svg_icons/email-svgrepo-com.svg" alt=""></a></li>
-          <li class="icon-item"><img src="./svg_icons/icons8-linkedin.svg" alt="" onclick="window.location.href='http:\/\/www.linkedin.com/in/xingjian-diao-a5637814a/'"></li>
-          <li class="icon-item"><img src="./svg_icons/researchgate-logo-svgrepo-com.svg" alt="" onclick="window.location.href='http:\/\/researchgate.net/profile/Xingjian_Diao/'"></li>
-          <li class="icon-item"><img src="./svg_icons/icons8-google-scholar.svg" alt="" onclick="window.location.href='https:\/\/scholar.google.com/citations?hl=en&authuser=2&user=vnJ2qq5rgsAC'"></li>
+          <li class="icon-item"><a href="mailto:peijun.qing.gr@dartmouth.edu"><img src="./svg_icons/email-svgrepo-com.svg" alt=""></a></li>
+          <li class="icon-item"><img src="./svg_icons/icons8-linkedin.svg" alt="" onclick="window.location.href='http:\/\/www.linkedin.com/in/peijun-qing-3421982a1/'"></li>
+          <!--<li class="icon-item"><img src="./svg_icons/researchgate-logo-svgrepo-com.svg" alt="" onclick="window.location.href='http:\/\/researchgate.net/profile/Xingjian_Diao/'"></li>-->
+          <li class="icon-item"><img src="./svg_icons/icons8-google-scholar.svg" alt="" onclick="window.location.href='https:\/\/scholar.google.com/citations?user=8iYd-1UAAAAJ&hl=en'"></li>
           <!-- <li class="icon-item"><img src="./svg_icons/curriculum-vitae-resume-svgrepo-com.svg" alt="" onclick="window.location.href='./Xingjian_CV.pdf'" ></li> -->
 
         </ul>
@@ -244,7 +244,7 @@
 <section id="News" class="showcase">
   <div class="showcase-left">
     <div class="showcase-left-title">News</div>
-    <div class="showcase-left-desc">Recent Updates</div>
+    <!--<div class="showcase-left-desc">Recent Updates</div>-->
   </div>
 
   <div class="showcase-right">
@@ -265,9 +265,6 @@
     <section id="Teaching" class="showcase">
       <div class="showcase-left">
         <div class="showcase-left-title">Teaching</div>
-        <div class="footnote">
-            <p>TA indicates Teaching Assistant</p>
-        </div>
       </div>
       <div class="showcase-right">
         <table width="100%" align="center" border="0" cellpadding="20"><tbody>
@@ -275,7 +272,7 @@
             <td style="padding:30px;width:25%;vertical-align:middle">
               <img src="images/dartmouth_logo.png" width="120">
             </td>
-            <td width="75%" valign="center">
+            <td width="75%" valign="center" style="font-size: 1.5em;">
               <a>Graduate TA, Artificial Intelligence, <a href="https://dartmouth.smartcatalogiq.com/en/2022/orc/departments-programs-undergraduate/computer-science/cosc-computer-science-undergraduate/cosc-76/" target="_blank" style="color:#4169E1; text-decoration: none;">CS76/276</a>, Fall 2024</a>
               <br>
 
