--- a/index.html
+++ b/index.html
@@ -66,8 +66,8 @@
         <h1 class="biography-title">About Me</h1>
         <br><br>
         <section class="biography">
-        <p>Hi! I'm Peijun, a second-year Ph.D. student in Computer Science at Dartmouth College, working with Prof. <a style="color:#4169E1; text-decoration: none;" href="https://web.cs.dartmouth.edu/people/soroush-vosoughi/">Soroush Vosoughi</a>. Prior to Dartmouth, I earned a B.S. degree from Xidian University. I began my journey in Natural Language Processing during an internship at OPPO Research Institute.</p>
-        <br><p> <b>Research</b>: I am generally interested in <b>Language Model Behavior</b>, with the current focus on LLM alignment. I am extremely interested in proposing simple methods to address complicated real-world scenarios. </p>
+        <p>Hi! I'm Peijun, a second-year Ph.D. student in Computer Science at Dartmouth College, working with Prof. <a style="color:#4169E1; text-decoration: none;" href="https://web.cs.dartmouth.edu/people/soroush-vosoughi/">Soroush Vosoughi</a> and co-advised by Prof. <a style="color:#4169E1; text-decoration: none;" href="https://www.hassanpourlab.com/team">Saeed Hassanpour</a>. Prior to Dartmouth, I received my bachelor's degree from Xidian University. I began my journey in Natural Language Processing during an internship at OPPO Research Institute, where I explored Knowledge-Augmented LLMs.</p>
+        <br><p> <b>Research</b>: I am generally interested in <b>Language Model Behavior</b>, with the current focus on LLM alignment. Before that, I worked on improving robustness and efficiency of LLMs and optimizing complex reasoning. I am extremely interested in developing simple yet scalable methods to address intricate real-world scenarios.</p>
 
       </section>
         <br><br>
@@ -97,7 +97,7 @@
                 <br>
                 <strong>Peijun Qing</strong>, Chongyang Gao, Yefan Zhou, Xingjian Diao, Yaoqing Yang, Soroush Vosoughi
                 <br>
-                <em>Conference on Empirical Methods in Natural Language Processing (EMNLP)</em>, 2024
+                <em>Conference on Empirical Methods in Natural Language Processing (EMNLP)</em>, 2024.
                 <br>
                 <p></p>
               </td>
@@ -114,7 +114,7 @@
                 <br>
                 Fobo Shi<sup>*</sup>, <strong>Peijun Qing</strong><sup>*</sup>, Dong Yang<sup>*</sup>, Nan Wang, Youbo Lei, Haonan Lu, Xiaodong Lin, Duantengchuan Li
                 <br>
-                <em>North American Chapter of the Association for Computational Linguistics (NAACL)</em>, 2023
+                <em>North American Chapter of the Association for Computational Linguistics (NAACL)</em>, 2023.
                 <br>
                 <p></p>
               </td>
@@ -132,7 +132,7 @@
                 <br>
                 Dong Yang<sup>*</sup>, <strong>Peijun Qing</strong><sup>*</sup>, Yang Li, Haonan Lu, Xiaodong Lin
                 <br>
-                <em>Conference on Empirical Methods in Natural Language Processing (EMNLP)</em>, 2022
+                <em>Conference on Empirical Methods in Natural Language Processing (EMNLP)</em>, 2022, <span style="color:gold;">Oral Presentation</span>.
                 <br>
                 <p></p>
               </td>
@@ -293,7 +293,7 @@
   </div>
   <div class="showcase-right">
     <ul class="service-ul">
-      <li class="service-item" style="font-size: 1.5em;">  <strong>Reviewer:</strong> NeurIPS 2024, ICLR2025, AISTATS 2025.</li>
+      <li class="service-item" style="font-size: 1.5em;">  <strong>Reviewer:</strong> NeurIPS 2024, ICLR2025, AISTATS 2025, ICASSP 2025.</li>
 
 
     </ul>
