--- a/index.html
+++ b/index.html
@@ -66,8 +66,8 @@
         <h1 class="biography-title">About Me</h1>
         <br><br>
         <section class="biography">
-        <p>Hi! I'm Peijun, a second-year Ph.D. student in Computer Science at Dartmouth College, working with Prof. <a style="color:#4169E1; text-decoration: none;" href="https://web.cs.dartmouth.edu/people/soroush-vosoughi/">Soroush Vosoughi</a> and co-advised by Prof. <a style="color:#4169E1; text-decoration: none;" href="https://www.hassanpourlab.com/team">Saeed Hassanpour</a>. Prior to Dartmouth, I received my bachelor's degree from Xidian University. I began my journey in Natural Language Processing during an internship at OPPO Research Institute, where I explored Knowledge-Augmented LLMs.</p>
-        <br><p> <b>Research</b>: I am generally interested in <b>Language Model Behavior</b>, with the current focus on LLM alignment. Before that, I worked on improving robustness and efficiency of LLMs and optimizing complex reasoning. I am extremely interested in developing simple yet scalable methods to address intricate real-world scenarios.</p>
+        <p>Hi! I'm Peijun, a second-year Ph.D. student in <a style="color:#4169E1; text-decoration: none;" href="https://web.cs.dartmouth.edu/">Computer Science</a> at Dartmouth College, working with Prof. <a style="color:#4169E1; text-decoration: none;" href="https://web.cs.dartmouth.edu/people/soroush-vosoughi/">Soroush Vosoughi</a> and co-advised by Prof. <a style="color:#4169E1; text-decoration: none;" href="https://www.hassanpourlab.com/team">Saeed Hassanpour</a>. Prior to Dartmouth, I received my bachelor's degree from Xidian University. I began my journey in NLP during an internship at OPPO Research Institute, where I explored Knowledge-augmented LLMs.</p>
+        <br><p> <b>Research</b>: I am generally interested in <b>language model behavior</b>, with the current focus on <b>LLM alignment</b>. Before that, I worked on improving <b>robustness and efficiency<b/> of LLMs and optimizing <b>complex reasoning</b>. I am extremely interested in developing simple yet scalable methods to address intricate real-world scenarios.</p>
 
       </section>
         <br><br>
@@ -91,7 +91,7 @@
                 <img src="images/publications/alphalora.png"  style="width:100%;height:auto;">
               </td>
               <td width="75%" valign="middle">
-                <a href="" target="_blank" style="color:#4169E1; text-decoration: none;">
+                <a href="https://arxiv.org/abs/2410.10054" target="_blank" style="color:#4169E1; text-decoration: none;">
                   <papertitle>AlphaLoRA: Assigning LoRA Experts Based on Layer Training Quality</papertitle>
                 </a>
                 <br>
@@ -108,7 +108,7 @@
                 <img src="images/publications/promptspace.png" style="width:100%;height:auto;">
               </td>
               <td width="75%" valign="middle">
-                <a href="" target="_blank" style="color:#4169E1; text-decoration: none;">
+                <a href="https://arxiv.org/abs/2306.03799" target="_blank" style="color:#4169E1; text-decoration: none;">
                   <papertitle>Prompt Space Optimizing Few-shot Reasoning Success with Large Language Models</papertitle>
                 </a>
                 <br>
@@ -126,13 +126,13 @@
                 <img src="images/publications/plot1.png" style="width:100%;height:auto;">
               </td>
               <td width="75%" valign="middle">
-                <a href="" target="_blank" style="color:#4169E1; text-decoration: none;">
+                <a href="https://arxiv.org/abs/2210.15578" target="_blank" style="color:#4169E1; text-decoration: none;">
                   <papertitle>GammaE: Gamma Embeddings for Logical Queries on Knowledge Graphs</papertitle>
                 </a>
                 <br>
                 Dong Yang<sup>*</sup>, <strong>Peijun Qing</strong><sup>*</sup>, Yang Li, Haonan Lu, Xiaodong Lin
                 <br>
-                <em>Conference on Empirical Methods in Natural Language Processing (EMNLP)</em>, 2022, <span style="color:gold;">Oral Presentation</span>.
+                <em>Conference on Empirical Methods in Natural Language Processing (EMNLP)</em>, 2022, <span style="color:gold;"><b>Oral Presentation</b></span>.
                 <br>
                 <p></p>
               </td>
